# ticketchain

./: .gitignore  COOLIFY_DEPLOYMENT.md  README.md  docker-compose.coolify.yml  docker-compose.yml  package-lock.json  quick_test.sh  test-api.sh  test_event_routes_ci.sh  test_jwt_integration.sh  test_loyalty_integration.sh  test_marketplace.sh  test_queue.sh  test_queue_to_buy.sh  test_ticket.sh
.github/workflows/: ci.yml
app/: .dockerignore  .env.example  Dockerfile  EventManagerABI.json  LoyaltyPointABI.json  LoyaltySystemABI.json  README.md  ResaleMarketABI.json  TicketNFTABI.json  config.py  main.py  models.py  pyproject.toml  run_event_tests.sh  startup.sh  test_db_connection.py  test_rbac.sh  update_abi.sh  web3_manager.py
app/database/: db.py  db_models.py  init_db.py
app/dependencies/: role_deps.py
app/middleware/: auth.py
app/routes/: account_route.py  auth_route.py  buy_tickets.py  create_event.py  event_route.py  loyalty_route.py  market_route.py  ticket_route.py
app/services/: auth_service.py
app/ticket_queue/: queue_manager.py  queue_routes.py
backend/: Dockerfile  README.md  hardhat.config.docker.js  hardhat.config.js  package-lock.json  package.json
backend/contracts/: EventManager.sol  LoyaltyPoint.sol  LoyaltySystem.sol  ResaleMarket.sol  TicketNFT.sol  TicketSwap.sol
backend/docker/: entrypoint.sh
backend/scripts/: README.md  deploy.js  deploy.sh  export.js  simple-event-listener.js
backend/test/: Test.js  (+4 more)
ci-scripts/: test_loyalty_integration.sh  test_ticket.sh
test_shells/: test_event_fixes.sh  test_marketplace.sh
(+30 files in other folders)
